...
                        .clip(RoundedCornerShape(bottomStart = 20.dp, bottomEnd = 20.dp))
                        .blur(radius = 15.dp)
                        .alpha(0.5f)
                )
                Icon(
                    imageVector = Icons.Default.ArrowBack,
                    contentDescription = "Back",
                    modifier = Modifier
                        .padding(16.dp)
                        .clickable { onBackClick() }
                        .semantics {
                            contentDescription = "Back"
                        },
...
                .height(1.dp)
                .background(Color.LightGray)
        )
        Row(
            verticalAlignment = Alignment.CenterVertically, modifier = modifier.padding(16.dp)
        ) {
            FavoriteButton(isFavorite = favoriteNow,
                onAddToFavorite = {
                    favoriteNow = !favoriteNow
                    onAddToFavorite(favoriteNow)
                },
                modifier = modifier.semantics(
                    mergeDescendants = true
...
