...
    ShapeBackground()
    LazyVerticalStaggeredGrid(
        columns = StaggeredGridCells.Adaptive(140.dp),
        contentPadding = PaddingValues(16.dp),
        verticalItemSpacing = 4.dp,
        horizontalArrangement = Arrangement.spacedBy(4.dp),
        modifier = modifier.testTag("BookList")
    ) {
        item(
            key = "search_bar",
            span = StaggeredGridItemSpan.Companion.FullLine
        ) {
            Column {
...
